--- a/.github/workflows/ibm.yml
+++ b/.github/workflows/ibm.yml
@@ -13,6 +13,7 @@ defaults:
 
 env:
   IBM_ACCOUNT: ${{ secrets.IBM_ACCOUNT }}
+  IBM_PWD: ${{ secrets.IBM_PWD }}
   RESOURSE_ID: ${{ secrets.RESOURSE_ID }}
   IBM_APP_NAME: ${{ secrets.IBM_APP_NAME }}
   IBM_MEMORY: ${{ secrets.IBM_MEMORY }}
